--- a/luabibentry.dtx
+++ b/luabibentry.dtx
@@ -41,7 +41,7 @@
 \obeyspaces\obeylines
 \global\def\preambletext{
 \space
-Copyright (c) 2012 by Oliver Kopp <oliver.kopp.googlemail.com>
+Copyright (c) 2012 by Oliver Kopp
 
 This file was generated from file(s) of luabibentry distribution.
 -----------------------------------------------------------------
